Working contours (format 0 cmaps only)

--- a/FontParserApp/Properties/launchSettings.json
+++ b/FontParserApp/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "FontParserApp": {
-      "commandName": "Project",
-      "commandLineArgs": "c:\\Windows\\Fonts\\verdana.ttf"
+      "commandName": "Project"
     }
   }
 }
